# hoass_nanoleaf-effect-card

./: .editorconfig  .gitignore  .prettierrc  AUTHOR_REPLACEMENT_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMMIT_TEMPLATE_FORMAT.md  COMMIT_TRACKING.md  COMMIT_TRACKING_COMPLETE.md  COMPLETE.md  CONTRIBUTING.md  DEVELOPMENT.md  EDITOR-FIX.md  EDITOR-VERIFICATION.md  FIX_COMMITS_AUTO_SQUASH.md  FIX_COMMITS_COLORIZED_DIFF.md  FIX_COMMITS_COMPLETE.md  FIX_COMMITS_DIFF_UPDATE.md  FIX_COMMITS_ENV_VAR_FIXED.md  FIX_COMMITS_ESCAPING_FIXED.md  FIX_COMMITS_FINAL_IMPROVEMENTS.md  FIX_COMMITS_FIXED.md  FIX_COMMITS_GUIDE.md  FIX_COMMITS_LINE_LEVEL_SQUASHING.md  FIX_COMMITS_NO_DROP.md  FIX_COMMITS_QUERY_ERROR_EDIT.md  FIX_COMMITS_RECOVERY_TAGS.md  FIX_COMMITS_SQUASHING.md  FLEXIBLE_MESSAGE_COMPLETE.md  GITHUB_WORKFLOWS_INTEGRATION.md  INIT_CLEANUP_COMPLETE.md  INIT_COMMIT_SH_FIX.md  INIT_ENHANCEMENTS_COMPLETE.md  INIT_FRONTEND_NONE_OPTION.md  INIT_GIT_INTEGRATION.md  INIT_RERUN_COMPLETE.md  INIT_RERUN_FRONTEND_FIX.md  INIT_SUMMARY_FORMAT.md  LICENSE  (+39 more)
.github/: copilot-instructions.md  pull_request_template.md
ai/: ARCHITECTURE.md  COMPLETE.md  COMPLETION-MARKER.md  CONTINUATION.md  DOCUMENTATION-UPDATE.md  EDITOR-ENHANCEMENT.md  EDITOR-EXTRACTION.md  EDITOR-FIX.md  FINAL-COMPLETION.md  HA-SORTABLE-INTEGRATION.md  HACS-FIX.md  NAME_BASED_MERGE.md  PROJECT.md  QUICK-REFERENCE.md  README.md  STATUS.md  TODO.md  errors.md  prompt.md  query.md
frontend_vue/: .eslintignore  .eslintrc.cjs  dprint.json  eslint.airbnb.mjs  eslint.base.js  eslint.config.js  eslint.html.js  eslint.init.js  eslint.local.mark-html.mjs  eslint.ts.js  eslint.vue.js  index.html  package.json  (+7 more)
(+69 files in other folders)
