[project]
name = "hoass-template"
readme = "README.md"
version = "0.0.0-pre0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
]
license = { text = "MIT" }
authors = [{ name = "luckydonald" }, { name = "luckylucy" }]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "homeassistant>=2024.1.0",
]

