[project]
name = "hoass-plugin-template"
readme = "README.md"
version = "0.0.0-pre0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
]
license = { text = "MIT" }
authors = [{ name = "luckydonald" }, { name = "luckylucy" }]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "homeassistant>=2024.1.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-homeassistant-custom-component>=0.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=custom_components.plugin_template",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["custom_components/plugin_template"]
omit = [
    "tests/*",
    "**/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

